src/objects/Move_Out_Address_Article_Link__mdt.object
<CustomObject>
    <description>a.	How do I apply for a new service?
b.	How do I enroll a service (SIN) to my Meralco Online account?
c.	How do I remove a service (SIN) from my Meralco Online account?</description>
    <fields>
        <fullName>Apply_New_Service_how__c</fullName>
        <description>a.How do I apply for a new service</description>
        <label>Apply_New_Service_how</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enroll_Sin_How__c</fullName>
        <description>b. How do I enroll a service (SIN) to my Meralco Online account?</description>
        <label>Enroll_Sin_How</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Remove_Sin_How__c</fullName>
        <description>c. How do I remove a service (SIN) from my Meralco Online account?</description>
        <label>Remove_Sin_How</label>
        <type>Url</type>
    </fields>
    <label>Move_Out_Address_Article_Link</label>
    <pluralLabel>Move_Out_Address_Article_Links</pluralLabel>
</CustomObject>